2021/07/01/css/index.css
@import url("https://fonts.googleapis.com/css2?family=Cormorant+Garamond&family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");

@font-face {
  font-family: "Haas";
  font-weight: normal;
  src: url("fonts/Neue Haas Grotesk Display Pro 55 Regular.eot");
  src: url("fonts/Neue Haas Grotesk Display Pro 55 Regular.eot?#iefix")
      format("embedded-opentype"),
    url("fonts/Neue Haas Grotesk Display Pro 55 Regular.woff2") format("woff2"),
    url("fonts/Neue Haas Grotesk Display Pro 55 Regular.woff") format("woff"),
    url("fonts/Neue Haas Grotesk Display Pro 55 Regular.ttf") format("truetype"),
    url("fonts/Neue Haas Grotesk Display Pro 55 Regular.svg#Neue Haas Grotesk Display Pro 55 Regular")
      format("svg");
}

@font-face {
  font-family: "Haas";
  font-weight: bold;
  src: url("fonts/Neue Haas Grotesk Display Pro 75 Bold.eot");
  src: url("fonts/Neue Haas Grotesk Display Pro 75 Bold.eot?#iefix")
      format("embedded-opentype"),
    url("fonts/Neue Haas Grotesk Display Pro 75 Bold.woff2") format("woff2"),
    url("fonts/Neue Haas Grotesk Display Pro 75 Bold.woff") format("woff"),
    url("fonts/Neue Haas Grotesk Display Pro 75 Bold.ttf") format("truetype"),
    url("fonts/Neue Haas Grotesk Display Pro 75 Bold.svg#Neue Haas Grotesk Display Pro 75 Bold")
      format("svg");
}

* {
  margin: 0;
  padding: 0;
}

html,
body {
  background-color: rgb(26, 29, 28);
  width: 100vw;
  height: 100vh;
  font-family: "Haas", "Rubik", "IcoFont", sans-serif;
}

a {
  text-decoration: none;
  color: rgb(32, 147, 204);
}

a[disabled] {
  color: #999;
}

a:not([disabled]):hover {
  color: rgb(108, 168, 199);
}

/* Main content area with padding. */
#content {
  box-sizing: border-box;
  padding: 30px;
  padding-bottom: 15px;
  width: 100vw;
  min-width: 480px;
  height: 90vh;
  min-height: 360px;
}

/* Main content area without padding. */
#content-inner {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  height: 100%;
}

/* Poster box wrapper for sizing and box shadow. */
.poster-box-sizing-wrapper {
  border: 4px solid #eee;
  box-shadow: 5px 5px 0px 1px rgb(207, 207, 253),
    10px 10px 0px 1px rgb(176, 176, 252), 15px 15px 0px 1px #88d;
}

/* Poster box area with padding. */
.poster-box {
  box-sizing: border-box;
  background-color: rgb(42, 50, 95);
  padding-top: 4%;
  padding-right: calc(4% * 8.5 / 11);
  padding-bottom: 4%;
  padding-left: calc(4% * 8.5 / 11);
  width: 100%;
  max-width: 100%;
  height: 100%;
  max-height: 100%;
  overflow: hidden;
}

/* Poster box area without padding. */
.poster-box-inner {
  position: relative;
  width: 100%;
  height: 100%;
  color: rgb(255, 255, 254);
  font-size: 100%;
}

/**
 * Content box settings.
 */

.content-box {
  box-sizing: border-box;
  display: inline-block;
  position: absolute;
  flex-basis: auto;
  flex-grow: 1;
  min-width: 1em;
  max-width: 100%;
  height: fit-content;
  word-wrap: break-word;
  touch-action: none;
}

.content-box:empty::before {
  display: block;
  width: 100%;
  text-align: center;
  content: "...";
}

.content-box:focus {
  outline: none;
}

.content-box:hover {
  outline: rgb(207, 207, 253) solid 1px !important;
  outline-offset: 5px !important;
}

.content-box:active {
  outline: rgb(207, 207, 253) dotted 1px !important;
  outline-offset: 5px !important;
}

.content-box.ck-editor__editable {
  outline: rgb(207, 207, 253) dotted 1px !important;
  outline-offset: 5px !important;
  overflow: visible !important;
}

.ck-editor__editable,
.ck-editor__editable * {
  margin: 0 !important;
  padding: 0 !important;
}

.ck-blurred,
.ck-focused,
.ck-balloon-panel {
  border: none !important;
  box-shadow: none !important;
}

.ck.ck-toolbar-container {
  margin-top: -7px !important;
  margin-left: -5px !important;
}

.ck.ck-toolbar {
  min-width: 200px;
}

/**
 * Seal styles.
 */

.seal {
  display: flex;
  position: relative;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  border: 1px solid white;
  border-radius: 50%;
  color: white;
  font-family: "IcoFont", sans-serif;
}

.seal-text {
  text-transform: uppercase;
  color: white;
  font-family: "Cormorant Garamond", serif;
}

.seal-inner {
  display: flex;
  position: absolute;
  top: 50%;
  left: 50%;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  transform: translate(-50%, -50%);
  border: 1px solid white;
  border-radius: 50%;
  color: white;
}

/**
 * Footer styles.
 */

#footer {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 100%;
  height: 10vh;
  line-height: 1.25;
  font-size: 1.25vh;
}

#footer button {
  border: none;
  background: none !important;
  cursor: pointer;
  padding: 0 !important;
  color: rgb(32, 147, 204);
  font-family: inherit;
}

#footer button:hover {
  color: rgb(108, 168, 199);
}

#footer button:disabled {
  color: #999;
}

.slash-spacer::before {
  content: "//";
}

.slash-spacer {
  margin-right: 0.5em;
  margin-left: 0.5em;
  color: white;
}

